bugfix: correct text scaling on mobile devices

--- a/assets/sass/components/_base.scss
+++ b/assets/sass/components/_base.scss
@@ -22,6 +22,7 @@
 
 html {
   touch-action: none;
+  font-size: var(--ui-scale);
 }
 
 html,
@@ -34,4 +35,6 @@ body {
   background-image: var(--background-default);
   background-position: center center;
   background-size: cover;
+  font-size: 1rem;
+  text-size-adjust: auto;
 }
